--- a/Kariyer.html
+++ b/Kariyer.html
@@ -283,7 +283,7 @@ table {
 
 <table width="1059" border="1" align="center" cellpadding="1" cellspacing="1">
  <tr>
-    <td width="738" height="152" align="center" X><img src="Resimler/logo.gif" alt="logo" width="269" height="148" align="left"><div class="topnav">
+    <td width="738" height="152" align="center" X><img src="logo.gif" alt="logo" width="269" height="148" align="left"><div class="topnav">
   
   <div class="search-container">
     <form >
