--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ table {
   </tr>
   <tr>
     <td height="39" align="center"  colspan="2"><div class="navbar">
-  <a class="active"  href="/index.html">ANASAYFA</a> 
+  <a class="active"  href="index.html">ANASAYFA</a> 
   <a href="Hizmetlerimiz.html">HİZMETLERİMİZ</a> 
   <a href="Kurumsal.html">KURUMSAL</a> 
   <a href="Kariyer.html">KARİYER</a>
