--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ Güvercin Sk. No:48</a>
 </table>
 <hr width="950" />
 <footer>
- <p align=center>
+ <p  align="right">
 <a href="https://twitter.com/?lang=tr"><img src="twitter.png" width="40" height="40" alt="T" /></a>
 <a href="https://www.instagram.com/"><img src="instagram.png" width="40" height="40" alt="i" /></a><a href="https://tr.linkedin.com/"><img src="linkedin.png" width="40" height="40" alt="l" /></a><a href="https://www.facebook.com/?stype=lo&amp;jlou=AfdEyXBcLOt0syWt1eTf4rvk9t7_y6aSwQZQFpSsWUErd1eYj9gGjbt9hrEd_pR94Y33s98uipcq3zw01S6SxTK5KVV7LAJfj-XYH10lLTcViQ&amp;smuh=15441&amp;lh=Ac8X8PxAyqB0HYNo"><img src="facebook.png" width="40" height="40" alt="F" /></a></p>
  <h2 align=center>CopyRight©</h2>
